--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/activity_customers_add_customers2.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/activity_customers_add_customers2.xml
@@ -764,6 +764,7 @@
                 >
 
                 <LinearLayout
+                    android:id="@+id/ll_showlabel"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:layout_margin="20dp"
@@ -774,6 +775,7 @@
 
 
                     <TextView
+                        android:id="@+id/tv_showlabel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@android:color/transparent"
