--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/activity_customers_add_genjinjilu.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/activity_customers_add_genjinjilu.xml
@@ -196,12 +196,14 @@
                         >
 
                         <RadioGroup
+                            android:id="@+id/rg_follow_type"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:layout_marginLeft="60dp"
                             >
                             <RadioButton
+                                android:id="@+id/rb_tel"
                                 android:text="电话"
                                 android:textSize="14sp"
                                 android:layout_width="wrap_content"
@@ -209,6 +211,7 @@
 
                                 />
                             <RadioButton
+                                android:id="@+id/rb_qq"
                                 android:text="QQ"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -217,6 +220,7 @@
 
                                 />
                             <RadioButton
+                                android:id="@+id/rb_weixin"
                                 android:text="微信"
                                 android:textSize="14sp"
                                 android:layout_width="wrap_content"
@@ -227,6 +231,7 @@
 
 
                             <RadioButton
+                                android:id="@+id/rb_miantan"
                                 android:text="面谈"
                                 android:textSize="14sp"
                                 android:layout_width="wrap_content"
@@ -235,6 +240,7 @@
                                 android:layout_marginTop="-30dp"
                                 />
                             <RadioButton
+                                android:id="@+id/rb_qita"
                                 android:text="其他"
                                 android:textSize="14sp"
                                 android:layout_width="wrap_content"
@@ -274,6 +280,7 @@
                             />
 
                         <TextView
+                            android:id="@+id/tv_showseekbar1"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="7"
@@ -281,13 +288,14 @@
                             android:paddingBottom="10dp"
                             android:paddingLeft="10dp"
                             android:paddingTop="10dp"
-                            android:text="45"
+                            android:text="0"
                             android:textSize="15sp"
                             />
 
                     </LinearLayout>
 
                     <SeekBar
+                        android:id="@+id/sb_addGenJinLu1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:max="100"
@@ -331,6 +339,7 @@
                             />
 
                         <TextView
+                            android:id="@+id/tv_showseekbar2"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="7"
@@ -338,13 +347,14 @@
                             android:paddingBottom="10dp"
                             android:paddingLeft="10dp"
                             android:paddingTop="10dp"
-                            android:text="45"
+                            android:text="0"
                             android:textSize="15sp"
                             />
 
                     </LinearLayout>
 
                     <SeekBar
+                        android:id="@+id/sb_addGenJinLu2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:max="100"
@@ -397,12 +407,12 @@
                         android:paddingTop="10dp"
                         >
                         <Spinner
-                            android:id="@+id/customers_spinner_需求类型"
+                            android:id="@+id/customers_spinner_付款方式"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:dropDownVerticalOffset="35dp"
                             android:dropDownWidth="1080px"
-                            android:entries="@array/需求类型"
+                            android:entries="@array/付款方式"
                             >
                         </Spinner>
 
@@ -435,6 +445,7 @@
                         >
 
                         <EditText
+                            android:id="@+id/et_comment"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:padding="10dp"
@@ -471,6 +482,7 @@
                         android:paddingTop="10dp"
                         >
                         <TextView
+                            android:id="@+id/customers_nextTime"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text=""
@@ -478,6 +490,7 @@
                             />
 
                         <ImageButton
+                            android:id="@+id/im_customers_nextTime"
                             android:layout_width="wrap_content"
                             android:layout_height="20dp"
                             android:layout_alignParentRight="true"
